--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script type="text/javascript" src="javascripts/jquery.mobile-events.min.js"></script>
 
 <body>
-        <script src="axis_drag.js"></script>
+        <script src="axis_draggable.js"></script>
 </body>
     </html>
