--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <html>
   <head>
-    <script src="javascripts/jquery.js"></script>
-    <script src="javascripts/jquery-ui.min.js"></script>
-
-    <script src="javascripts/jquery.ui.touch-punch.js"></script>
-    <script type="text/javascript" src="javascripts/jquery.mobile-events.min.js"></script>
-
-<body>
-        <script src="axis_draggable.js"></script>
-</body>
-    </html>
+    <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+  </head>
+  <body>
+    <script src="axis_draggable.js"></script>
+  </body>
+</html>
